Definición de programador/a

--- a/index.html
+++ b/index.html
@@ -64,11 +64,58 @@
         </section>
 
         <section>
+          <h2>Advertencia</h2>
+          <p>
+            Los siguientes opiniones son en base a mi criterio y experiencia.
+          </p>
+        </section>
+
+        <section>
+          <h2>¿Qué es un programador/a?</h2>
+
+          <section>
+            <dl>
+              <dt>Programador/a</dt>
+              <dd>Organismo que convierte cafeína en codigo.</dd>
+            </dl>
+          </section>
+
+          <section>
+            <p>
+              Un programador o programadora es aquella persona que escribe,
+              depura y mantiene el código fuente de un programa informático.
+            </p>
+            <i>
+              Wikipedia -
+              <a href="https://es.wikipedia.org/wiki/Programador" target="_blank">
+                https://es.wikipedia.org/wiki/Programador
+              </a>
+            </i>
+          </section>
+
+          <section>
+            <img style="float: right;" src="/img/ada-lovelace.jpg" alt=""/>
+            <p>Ada Lovelace, primera progamadora de la historia.</p>
+          </section>
+        </section>
+
+        <section>
           <h2>Trabajo</h2>
         </section>
 
         <section>
           <h2>Salud</h2>
+
+          <section>
+            <p>Estar sentado varias horas frente a un computador no es saludable</p>
+            <p>Espalda</p>
+            <p>Ojos</p>
+            <p>Ejercicio</p>
+          </section>
+        </section>
+
+        <section>
+          <h2>Tu marca en Internet</h2>
         </section>
 
         <section>
@@ -91,6 +138,41 @@
           <h2>Comunidad</h2>
         </section>
 
+        <section>
+          <footer class="footer fragment">
+            <p>
+              <small class="text-center">
+                <a href="https://stsewd.dev/">
+                  <span>
+                    Más sobre mi
+                  </span>
+                  <br />
+                  <span>https://stsewd.dev/</span>
+                </a>
+              </small>
+            </p>
+
+            <p>
+              <small class="text-center">
+                <a href="https://github.com/stsewd/charla-la-vida-de-un-developer/">
+                  <span>
+                    Código fuente en GitHub <i class="fas fa-code-branch"></i>
+                  </span>
+                  <br />
+                  <span>https://github.com/stsewd/charla-la-vida-de-un-developer/</span>
+                </a>
+              </small>
+            </p>
+
+            <p>
+              <small>
+                @stsewd
+                <a href="http://github.com/stsewd"><i class="fab fa-github"></i></a>
+                <a href="http://twitter.com/stsewd"><i class="fab fa-twitter"></i></a>
+              </small>
+            </p>
+          </footer>
+        </section>
       </div>
     </div>
 
