--- a/index.html
+++ b/index.html
@@ -64,10 +64,17 @@
         </section>
 
         <section>
-          <h2>Advertencia</h2>
+          <h2 style="color: red;">Advertencia</h2>
           <p>
             Los siguientes opiniones son en base a mi criterio y experiencia.
           </p>
+          <p>Puede que tu opiniión o situación sea distinta.</p>
+
+          <aside class="notes">
+            <p>¿Quienes son programadores/ras de manera profesionnal aquí?</p>
+            <p>¿Quién está interesado en ser programador/a de manera profesionnal?</p>
+            <p>Esta charla es sobre romper estereotipos y falsedades al rededor de esta profesión</p>
+          </aside>
         </section>
 
         <section>
@@ -78,6 +85,9 @@
               <dt>Programador/a</dt>
               <dd>Organismo que convierte cafeína en codigo.</dd>
             </dl>
+            <p>
+              <i>El Internet</i>
+            </p>
           </section>
 
           <section>
@@ -91,16 +101,40 @@
                 https://es.wikipedia.org/wiki/Programador
               </a>
             </i>
+
+            <aside class="notes">
+              <p>
+                Siéntansen libres de escoger la definición que más les guste.
+              </p>
+            </aside>
           </section>
 
           <section>
             <img style="float: right;" src="/img/ada-lovelace.jpg" alt=""/>
             <p>Ada Lovelace, primera progamadora de la historia.</p>
+
+            <aside class="notes">
+              <p>
+                ¿Cómo luce una prorgramadora?
+                Ahí está la foto de una.
+              </p>
+            </aside>
           </section>
         </section>
 
         <section>
           <h2>Trabajo</h2>
+          <section>
+            <h3>Remoto / oficina</h3>
+          </section>
+
+          <section>
+            <h2>Oficina</h2>
+          </section>
+
+          <section>
+            <h2>Remoto</h2>
+          </section>
         </section>
 
         <section>
@@ -108,34 +142,79 @@
 
           <section>
             <p>Estar sentado varias horas frente a un computador no es saludable</p>
-            <p>Espalda</p>
-            <p>Ojos</p>
-            <p>Ejercicio</p>
+          </section>
+
+          <section>
+            <ul>
+              <li>Espalda</li>
+              <li>Ojos</li>
+              <li>Ejercicio</li>
+            </ul>
           </section>
         </section>
 
         <section>
           <h2>Tu marca en Internet</h2>
+          <p>
+            Blog, redes sociales, plataformas de ejercicios de programación,
+            foros, plataformas de código fuente
+          </p>
         </section>
 
         <section>
           <h2>Estereotipos</h2>
+
+          <p>
+            Mujeres no programan,
+            Ingenieros no programan
+            Necesitas un título
+            Programación es algo muy difícil
+          </p>
         </section>
 
         <section>
           <h2>Educación</h2>
+
+          <p>
+            Auto aprendizaje
+            Aprendizaje continuo
+            Curiosidad
+            Libros, documentación
+            Universidad
+          </p>
         </section>
 
         <section>
           <h2>Calidad</h2>
+
+          <p>
+            Como otra profesión,
+            debes ser responsable.
+
+            Ética
+
+            Tests,
+            dependencias,
+            documentación.
+          </p>
         </section>
 
         <section>
           <h2>Open Source</h2>
+
+          <p>
+            La mayoría de herramientas o lenguajes que usas para programar
+            son open source, retribuye.
+          </p>
         </section>
 
         <section>
           <h2>Comunidad</h2>
+
+          <p>
+            Participa activamente en las comunidades locales,
+            encuentrate con más personas que comparten la misma pasión por la prorgramación.
+          </p>
         </section>
 
         <section>
