--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
       document.getElementsByTagName( 'head' )[0].appendChild( link );
     </script>
+
+    <style type="text/css">
+th, td {
+  text-align: center !important;
+}
+    </style>
   </head>
 
   <body>
@@ -83,17 +89,17 @@
           <section>
             <dl>
               <dt>Programador/a</dt>
-              <dd>Organismo que convierte cafeína en codigo.</dd>
+              <dd>"Organismo que convierte cafeína en codigo"</dd>
             </dl>
             <p>
-              <i>El Internet</i>
+              <i>- El Internet</i>
             </p>
           </section>
 
           <section>
             <p>
-              Un programador o programadora es aquella persona que escribe,
-              depura y mantiene el código fuente de un programa informático.
+              "Un programador o programadora es aquella persona que escribe,
+              depura y mantiene el código fuente de un programa informático"
             </p>
             <i>
               Wikipedia -
@@ -125,15 +131,61 @@
         <section>
           <h2>Trabajo</h2>
           <section>
-            <h3>Remoto / oficina</h3>
+            <table>
+              <thead>
+                <tr>
+                  <th>Oficina</th>
+                  <th>Remoto</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Estás cerca de personas</td>
+                  <td>Con suerte tienes un perro con quien hablar</td>
+                </tr>
+                <tr>
+                  <td>Tienes un horario fijo que cumplir</td>
+                  <td>Tienes un horario flexible</td>
+                </tr>
+                <tr>
+                  <td>
+                    Es fácil separar tu vida personal del trabajo
+                  </td>
+                  <td>
+                    Tu vida personal y el trabajo pueden ser un poco difusas
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </section>
 
           <section>
-            <h2>Oficina</h2>
-          </section>
-
-          <section>
-            <h2>Remoto</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>Oficina</th>
+                  <th>Remoto</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    Trabajar en empresas locales (o mudarte)
+                  </td>
+                  <td>
+                    Oportunidada de trabajar en empresas internacionales
+                  </td>
+                </tr>
+                <tr>
+                  <td>El empleador está a cargo de tu hardware/Internet</td>
+                  <td>Estás a cargo de tu hardware/Internet</td>
+                </tr>
+                <tr>
+                  <td>Normas de vestimenta de la empresa</td>
+                  <td>Trabajar sin pantalones</td>
+                </tr>
+              </tbody>
+            </table>
           </section>
         </section>
 
@@ -145,67 +197,148 @@
           </section>
 
           <section>
-            <ul>
-              <li>Espalda</li>
-              <li>Ojos</li>
-              <li>Ejercicio</li>
-            </ul>
+            <h2>Espalda</h2>
+            <img src="/img/proper-posture.png" width="600px" alt=""/>
+          </section>
+
+          <section>
+            <h2>Ojos</h2>
+            <img src="/img/red-eyes.jpg" alt=""/>
+          </section>
+
+          <section>
+            <h2>Manos</h2>
+            <img src="/img/carpal-tunnel.jpg" alt=""/>
+          </section>
+
+          <section>
+            <h2>Mental</h2>
+            <img src="/img/mental-health.png" width="550px" alt=""/>
           </section>
         </section>
 
         <section>
           <h2>Tu marca en Internet</h2>
-          <p>
-            Blog, redes sociales, plataformas de ejercicios de programación,
-            foros, plataformas de código fuente
-          </p>
+          <section>
+            <p>
+              “Talk is cheap. Show me the code.” 
+            </p>
+            <i>- Linus Torvalds</i>
+            <aside class="notes">
+              <p>
+                Blog, redes sociales, plataformas de ejercicios de programación,
+                foros, plataformas de código fuente
+              </p>  
+            </aside>
+          </section>
         </section>
 
         <section>
           <h2>Estereotipos</h2>
 
-          <p>
-            Mujeres no programan,
-            Ingenieros no programan
-            Necesitas un título
-            Programación es algo muy difícil
-          </p>
+          <section>
+            <h3>"La programación es algo muy difícil"</h3>
+          </section>
+
+          <section>
+            <h3>"Programar es cosa de hombres"</h3>
+          </section>
+
+          <section>
+            <h3>"Los Ingenieros no programan"</h3>
+            <p>
+              Those who can, do.
+              Those who can't, teach.
+            </p>
+            <i>- George Bernard Shaw</i>
+          </section>
+
+          <section>
+            <h3>"Necesitas un título en ciencias de la computación"</h3>
+          </section>
         </section>
 
         <section>
           <h2>Educación</h2>
 
-          <p>
-            Auto aprendizaje
-            Aprendizaje continuo
-            Curiosidad
-            Libros, documentación
-            Universidad
-          </p>
+          <section>
+            <h3>Aprendizaje continuo</h3>
+            <p>
+              Nunca pares de aprender.
+              Pero, está bien no saberlo todo.
+            </p>
+          </section>
+
+          <section>
+            <h3>Auto aprendizaje</h3>
+            <p>
+              ¡Spoiler! No necesitas ir a una aula de clases,
+              estar sentado por más de 2 horas para aprender.
+            </p>
+
+            <aside class="notes">
+              La educación ahora es un negocio en lugar de una bien para la sociedad.
+              Curiosidad de como funcionan las cosas
+              Más allá de tutoriales.
+              No a la piratería.
+            </aside>
+          </section>
+
         </section>
 
         <section>
-          <h2>Calidad</h2>
+          <h2>Calidad y ética</h2>
 
-          <p>
-            Como otra profesión,
-            debes ser responsable.
+          <section>
+            <p>
+              Como otra profesión,
+              debes ser responsable.
+            </p>
+          </section>
 
-            Ética
+          <section>
+            
+          </section>
 
-            Tests,
-            dependencias,
-            documentación.
-          </p>
+          <section>
+            <p>
+              Tu código va a ser usado por muchas personas.
+              Probablemente cosas importantes van a depender de tu código.
+            </p>
+          </section>
+
+          <section>
+            <p>Tu código va a ser leído y mantenído por otras personas.</p>
+            <p>
+              <ul>
+                <li>Buen código</li>
+                <li>Tests</li>
+                <li>Depdencias</li>
+                <li>Documentación</li>
+              </ul>
+            </p>
+            
+          </section>
         </section>
 
         <section>
           <h2>Open Source</h2>
 
-          <p>
+          <section>
+            <p>Ganas visibilidad, cualquiera puede ver tu trabajo.</p>
+          </section>
+
+          <section>
+            ¿No tienes la oportunidad de trabajar en x empresa usando x cool tecnología
+            o desarrollando algo que te interesa aprender?
+          </section>
+
+          <section>
+            <p>
             La mayoría de herramientas o lenguajes que usas para programar
             son open source, retribuye.
           </p>
+          </section>
         </section>
 
         <section>
@@ -218,7 +351,8 @@
         </section>
 
         <section>
-          <footer class="footer fragment">
+          <h2>¿Cuántos de ustedes quiere ser un programador/a?</h2>
+          <footer class= "footer fragment">
             <p>
               <small class="text-center">
                 <a href="https://stsewd.dev/">
