Ultimo cambio :shrug:

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ th, td {
                 <li>Buen código</li>
                 <li>Tests</li>
                 <li>Depdencias</li>
+                <li>Seguridad</li>
                 <li>Documentación</li>
               </ul>
             </p>
